Add MacOS x86_64 Settings